--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,8 +37,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   provider:
   fl_chart: ^0.60.0
-  hive: ^2.2.3
+  hive: ^2.0.4
   hive_flutter: ^1.1.0
+  path_provider: ^2.1.1
 
 dev_dependencies:
   flutter_test:
