--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   fl_chart: ^0.60.0
   hive: ^2.2.3
   hive_flutter: ^1.1.0
+  flutter_slidable: ^1.2.0
 
 dev_dependencies:
   flutter_test:
